Change color in css

--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,13 @@
 }
 
 table.calendar		{
-	border-left: 1px dotted #EEE; 
+	border-left: 1px dotted lightgray; 
 	width: 100%;
 }
 tr.calendar-row	{}
 td.calendar-day	{ min-height:120px; font-size:11px; position:relative; } 
 * html div.calendar-day { height:80px; }
-td.calendar-day:hover	{ background:#eee; }
+td.calendar-day:hover	{ background:lightgray; }
 td.calendar-day-np{
 	min-height:80px;
 } 
@@ -46,34 +46,33 @@ td.calendar-day-np{
 * html div.calendar-day-np { height:80px; }
 
 td.calendar-day-head { 
-	background: #EEE;
+	background: lightgray;
 	text-align: center;
 	width: 120px;
 	padding: 5px;
-	border-bottom: 1px dotted #EEE;
-	border-top: 1px dotted #EEE;
-	border-right: 1px dotted #EEE;
-	color: #777;
+	border-bottom: 1px dotted lightgray;
+	border-top: 1px dotted lightgray;
+	border-right: 1px dotted lightgray;
+	color: grey;
 	font-size: 13px; 
 }
 
 div.day-number{
 	padding: 5px;
-	color: #AAA;
+	color: black;
 	float: right;
 	margin: -5px -5px 0 0;
 	width: 20px;
 	text-align: center;
 	top: 0;
-/* 	position: absolute; */
 	right: 0;
 }
 
 td.calendar-day, td.calendar-day-np {
 	width: 120px;
 	padding: 5px;
-	border-bottom: 1px dotted #EEE;
-	border-right: 1px dotted #EEE;
+	border-bottom: 1px dotted lightgray;
+	border-right: 1px dotted lightgray;
 	position: relative;
 }
 
@@ -82,7 +81,7 @@ td.calendar-day, td.calendar-day-np {
 	top: 10px;
 	right: 10px;
 	font-size: 30px;
-	color: #666;
+	color: black;
 	cursor: pointer;
 	font-weight: bold;
 	font-family: verdana;
@@ -95,12 +94,12 @@ td.calendar-day, td.calendar-day-np {
 }
 
 .video_indv{
-	border-bottom: 1px dotted #CCC;
+	border-bottom: 1px dotted lightgray;
 	padding: 20px 0;
 }
 
 .twitter_widget_tweet{
-	border-bottom: 1px dotted #CCC;
+	border-bottom: 1px dotted lightgray;
 	padding: 10px 0;
 }
 
